--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
 </head>
 <body class="bg-white text-gray-900">
 
-    <!-- 🔹 سلايدر الهيدر -->
+    <!-- 🔹 سلايدر الهيدر المتحرك -->
     <div class="swiper-container">
         <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="img1.jpg" alt="منتج 1"></div>
-            <div class="swiper-slide"><img src="img2.jpg" alt="منتج 2"></div>
-            <div class="swiper-slide"><img src="img3.jpg" alt="منتج 3"></div>
-            <div class="swiper-slide"><img src="img4.jpg" alt="منتج 4"></div>
-            <div class="swiper-slide"><img src="img5.jpg" alt="منتج 5"></div>
-            <div class="swiper-slide"><img src="img6.jpg" alt="منتج 6"></div>
-            <div class="swiper-slide"><img src="img7.jpg" alt="منتج 7"></div>
-            <div class="swiper-slide"><img src="img8.jpg" alt="منتج 8"></div>
+            <div class="swiper-slide"><img src="img1.jpg" alt="منتج 1" class="w-full h-auto"></div>
+            <div class="swiper-slide"><img src="img2.jpg" alt="منتج 2" class="w-full h-auto"></div>
+            <div class="swiper-slide"><img src="img3.jpg" alt="منتج 3" class="w-full h-auto"></div>
+            <div class="swiper-slide"><img src="img4.jpg" alt="منتج 4" class="w-full h-auto"></div>
+            <div class="swiper-slide"><img src="img5.jpg" alt="منتج 5" class="w-full h-auto"></div>
+            <div class="swiper-slide"><img src="img6.jpg" alt="منتج 6" class="w-full h-auto"></div>
+            <div class="swiper-slide"><img src="img7.jpg" alt="منتج 7" class="w-full h-auto"></div>
+            <div class="swiper-slide"><img src="img8.jpg" alt="منتج 8" class="w-full h-auto"></div>
         </div>
+        <!-- أزرار التحكم -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
     </div>
 
     <!-- 🔹 معلومات التوصيل -->
@@ -111,7 +115,14 @@
                 },
                 slidesPerView: 1,
                 spaceBetween: 10,
-                effect: 'fade'
+                navigation: {
+                    nextEl: '.swiper-button-next',
+                    prevEl: '.swiper-button-prev',
+                },
+                pagination: {
+                    el: '.swiper-pagination',
+                    clickable: true,
+                }
             });
         });
     </script>
