--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <p id="priceDisplay"></p>
 
-            <button type="submit" class="submit-button">🚀 الدفع عند الاستلام</button>
+            <button type="submit" class="btn-glow">🚀 الدفع عند الاستلام</button>
         </form>
     </section>
 
