--- a/index.html
+++ b/index.html
@@ -10,9 +10,35 @@
 <body class="bg-white text-gray-900">
 
     <!-- 🔹 صورة الهيدر -->
-    <div class="header-container">
-        <img src="IMG_3185.jpeg" alt="الهيدر" class="header-image">
-    </div>
+    <header class="header">
+    <div class="container">
+        <!-- 🔹 القائمة -->
+        <nav class="nav">
+            <ul class="nav-links">
+                <li><a href="#" class="active">New</a></li>
+                <li><a href="#">Dresses</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Winter</a></li>
+                <li><a href="#">Sale</a></li>
+            </ul>
+        </nav>
+
+        <!-- 🔹 اللوجو -->
+        <div class="logo">Ecstasy.</div>
+
+        <!-- 🔹 البحث والسلة -->
+        <div class="nav-icons">
+            <div class="search-box">
+                <input type="text" placeholder="Search">
+                <button>🔍</button>
+            </div>
+            <a href="#" class="cart">
+                🛒
+                <span class="cart-badge">1</span>
+            </a>
+        </div>
+      </div>
+   </header>
 
     <!-- 🔹 معلومات التوصيل -->
     <div class="text-center mt-2 text-sm font-medium text-gray-600 flex flex-col items-center justify-center">
