--- a/index.html
+++ b/index.html
@@ -3,61 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>احصل على منتجك الآن!</title>
+    <title>طلب المنتج</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-white text-gray-900">
 
-    <!-- 🔹 صورة الهيدر -->
+    <!-- 🔹 الهيدر -->
     <header class="header">
-    <div class="container">
-        <!-- 🔹 القائمة -->
-        <nav class="nav">
-            <ul class="nav-links">
-                <li><a href="#" class="active">New</a></li>
-                <li><a href="#">Dresses</a></li>
-                <li><a href="#">Accessories</a></li>
-                <li><a href="#">Winter</a></li>
-                <li><a href="#">Sale</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <!-- 🔹 القائمة -->
+            <nav class="nav">
+                <ul class="nav-links">
+                    <li><a href="#" class="active">New</a></li>
+                    <li><a href="#">Dresses</a></li>
+                    <li><a href="#">Accessories</a></li>
+                    <li><a href="#">Winter</a></li>
+                    <li><a href="#">Sale</a></li>
+                </ul>
+            </nav>
 
-        <!-- 🔹 اللوجو -->
-        <div class="logo">Ecstasy.</div>
+            <!-- 🔹 اللوجو -->
+            <div class="logo">NLDN</div>
 
-        <!-- 🔹 البحث والسلة -->
-        <div class="nav-icons">
-            <div class="search-box">
-                <input type="text" placeholder="Search">
-                <button>🔍</button>
+            <!-- 🔹 البحث والسلة -->
+            <div class="nav-icons">
+                <div class="search-box">
+                    <input type="text" placeholder="Search">
+                    <button>🔍</button>
+                </div>
+                <a href="#" class="cart">
+                    🛒
+                    <span class="cart-badge">1</span>
+                </a>
             </div>
-            <a href="#" class="cart">
-                🛒
-                <span class="cart-badge">1</span>
-            </a>
         </div>
-      </div>
-   </header>
+    </header>
 
-    <!-- 🔹 معلومات التوصيل -->
-    <div class="text-center mt-2 text-sm font-medium text-gray-600 flex flex-col items-center justify-center">
-        <p>🚚 للمنتجات الملموسة: توصيل سريع خلال <span class="font-bold">2-5 أيام عمل</span></p>
-        <p>⚡ للمنتجات الرقمية: <span class="font-bold">التسليم فوري</span></p>
-    </div> 
+    <!-- 🔹 قسم الصور -->
+    <section class="relative w-full overflow-hidden mt-4">
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-2 p-4">
+            <img src="img1.jpg" alt="منتج 1" class="rounded-lg shadow-md w-full h-auto">
+            <img src="img2.jpg" alt="منتج 2" class="rounded-lg shadow-md w-full h-auto">
+            <img src="img3.jpg" alt="منتج 3" class="rounded-lg shadow-md w-full h-auto">
+            <img src="img4.jpg" alt="منتج 4" class="rounded-lg shadow-md w-full h-auto">
+        </div>
+    </section>
 
     <!-- 🔹 قسم الطلب -->
-    <section class="py-6">
+    <section class="py-10">
         <div class="container mx-auto text-center">
-            <h2 class="text-3xl font-bold text-gray-900 mb-4 flex items-center justify-center">
-                📋 قم بملء النموذج لطلب المنتج
-            </h2>
+            <h2 class="text-3xl font-bold text-gray-900 mb-4">📋 قم بملء النموذج لطلب المنتج</h2>
 
-            <!-- ✅ عنصر عرض رقم الطلب (مخفي افتراضيًا) -->
+            <!-- ✅ رقم الطلب -->
             <div id="orderNumberContainer" class="hidden text-center mt-4">
                 <h2 class="text-2xl font-bold text-green-600">🎉 تم تقديم طلبك بنجاح!</h2>
                 <p class="text-lg text-gray-700 mt-2">✅ رقم طلبك: <span id="orderNumber" class="font-semibold"></span></p>
-                <p class="text-sm text-gray-600 mt-1">يرجى الاحتفاظ بهذا الرقم لمتابعة طلبك.</p>
             </div>
 
             <!-- 🔹 نموذج الطلب -->
@@ -101,20 +102,7 @@
         </div>
     </section>
 
-    <!-- 🔹 وصف المنتج -->
-
-
-    <!-- 🔹 زر واتساب العائم -->
-    <a href="https://wa.me/966541827904?text=مرحبًا، أريد المساعدة في طلبي" 
-       id="whatsapp-button" 
-       target="_blank"
-       class="fixed bottom-4 right-4 bg-green-500 text-white p-3 rounded-full shadow-lg">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" 
-             alt="واتساب" 
-             class="w-10 h-10">
-    </a>
-
-    <!-- 🔹 الفوتر (أسفل الصفحة) -->
+    <!-- 🔹 الفوتر -->
     <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
         <div class="container mx-auto">
             <div class="flex justify-center space-x-6 space-x-reverse">
@@ -125,7 +113,7 @@
             <p class="mt-2">جميع الحقوق محفوظة 2025</p>
         </div>
     </footer>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
