--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>طلب المنتج</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-white text-gray-900">
+<body>
 
-    <!-- 🔹 الهيدر -->
+    <!-- 🔹 الشريط العلوي (الهيدر) -->
     <header class="header">
         <div class="container">
             <!-- 🔹 القائمة -->
@@ -24,7 +23,7 @@
             </nav>
 
             <!-- 🔹 اللوجو -->
-            <div class="logo">NLDN</div>
+            <div class="logo">Ecstasy.</div>
 
             <!-- 🔹 البحث والسلة -->
             <div class="nav-icons">
@@ -40,33 +39,22 @@
         </div>
     </header>
 
-    <!-- 🔹 قسم الصور -->
-    <section class="relative w-full overflow-hidden mt-4">
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-2 p-4">
-            <img src="img1.jpg" alt="منتج 1" class="rounded-lg shadow-md w-full h-auto">
-            <img src="img2.jpg" alt="منتج 2" class="rounded-lg shadow-md w-full h-auto">
-            <img src="img3.jpg" alt="منتج 3" class="rounded-lg shadow-md w-full h-auto">
-            <img src="img4.jpg" alt="منتج 4" class="rounded-lg shadow-md w-full h-auto">
-        </div>
-    </section>
+    <!-- 🔹 قسم الصور (أسفل الهيدر وليس داخله) -->
+    <div class="image-slider">
+        <img src="image1.jpg" alt="صورة 1">
+        <img src="image2.jpg" alt="صورة 2">
+        <img src="image3.jpg" alt="صورة 3">
+    </div>
 
-    <!-- 🔹 قسم الطلب -->
-    <section class="py-10">
-        <div class="container mx-auto text-center">
-            <h2 class="text-3xl font-bold text-gray-900 mb-4">📋 قم بملء النموذج لطلب المنتج</h2>
-
-            <!-- ✅ رقم الطلب -->
-            <div id="orderNumberContainer" class="hidden text-center mt-4">
-                <h2 class="text-2xl font-bold text-green-600">🎉 تم تقديم طلبك بنجاح!</h2>
-                <p class="text-lg text-gray-700 mt-2">✅ رقم طلبك: <span id="orderNumber" class="font-semibold"></span></p>
-            </div>
-
-            <!-- 🔹 نموذج الطلب -->
-            <form id="orderForm" class="mt-4 bg-white p-6 rounded-lg shadow-lg max-w-lg mx-auto">
-                <input type="text" id="name" placeholder="الاسم الكامل" required class="input-field">
+    <!-- 🔹 نموذج الطلب (بالحجم الكامل وبالأسفل) -->
+    <section class="order-section">
+        <div class="container">
+            <h2 class="section-title">📋 قم بملء النموذج لطلب المنتج</h2>
+            <form id="orderForm" class="order-form">
+                <input type="text" id="name" placeholder="الاسم الكامل" required>
                 
                 <div class="relative">
-                    <select id="country" required class="input-field pr-12">
+                    <select id="country" required>
                         <option value="sa" data-code="+966">🇸🇦 السعودية</option>
                         <option value="qa" data-code="+974">🇶🇦 قطر</option>
                         <option value="ae" data-code="+971">🇦🇪 الإمارات</option>
@@ -80,38 +68,36 @@
                     </select>
                 </div>
 
-                <input type="text" id="city" placeholder="المدينة" required class="input-field">
-                <input type="text" id="address" placeholder="العنوان" required class="input-field">
-                <input type="text" id="postalCode" placeholder="الرمز البريدي" required class="input-field">
+                <input type="text" id="city" placeholder="المدينة" required>
+                <input type="text" id="address" placeholder="العنوان" required>
+                <input type="text" id="postalCode" placeholder="الرمز البريدي" required>
 
-                <div class="flex items-center">
-                    <input type="tel" id="phone" placeholder="رقم الجوال" required class="input-field flex-1">
-                    <span id="country-code" class="bg-gray-300 p-2 rounded-lg ml-2">+966</span>
+                <div class="phone-input">
+                    <span id="country-code">+966</span>
+                    <input type="tel" id="phone" placeholder="رقم الجوال" required>
                 </div>
 
-                <select id="quantity" required class="input-field">
+                <select id="quantity" required>
                     <option value="1">1 قطعة</option>
                     <option value="2">2 قطع (خصم!)</option>
                     <option value="3">3 قطع (خصم أكبر!)</option>
                 </select>
 
-                <p id="priceDisplay" class="text-lg font-semibold text-gray-700 mt-2"></p>
+                <p id="priceDisplay" class="price-display">💰 السعر: 37 ريال</p>
 
-                <button type="submit" class="btn-glow mt-4">🚀 اطلب الآن والدفع عند الاستلام</button>
+                <button type="submit" class="btn-glow">🚀 اطلب الآن والدفع عند الاستلام</button>
             </form>
         </div>
     </section>
 
+    <!-- 🔹 زر واتساب العائم -->
+    <a href="https://wa.me/966541827904" class="whatsapp-button" target="_blank">
+        <img src="whatsapp-icon.png" class="whatsapp-icon" alt="واتساب">
+    </a>
+
     <!-- 🔹 الفوتر -->
-    <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
-        <div class="container mx-auto">
-            <div class="flex justify-center space-x-6 space-x-reverse">
-                <a href="policies.html#privacy-policy-content" class="hover:text-gray-900 font-medium px-3">سياسة الخصوصية</a>
-                <a href="policies.html#return-policy-content" class="hover:text-gray-900 font-medium px-3">سياسة الاسترجاع</a>
-                <a href="policies.html#about-us-content" class="hover:text-gray-900 font-medium px-3">من نحن</a>
-            </div>
-            <p class="mt-2">جميع الحقوق محفوظة 2025</p>
-        </div>
+    <footer class="footer">
+        <p>جميع الحقوق محفوظة 2025</p>
     </footer>
 
     <script src="script.js"></script>
