--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                 <!-- المنتج الثاني -->
                 <div class="bg-white p-4 rounded-lg shadow-lg">
-                    <img src="/image/product2.jpeg" alt="منتج 2" class="rounded-lg mx-auto mb-3">
+                    <img src="/images/product2.jpeg" alt="منتج 2" class="rounded-lg mx-auto mb-3">
                     <h3 class="text-xl font-bold text-gray-900">🌿 منتج العناية بالبشرة</h3>
                     <p class="text-gray-700 mt-2">تركيبة طبيعية تمنح بشرتك النعومة والانتعاش، مثالي لكل أنواع البشرة.</p>
                 </div>
