--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- المنتج الأول -->
                 <div class="bg-white p-4 rounded-lg shadow-lg">
-                    <img src="/images/product1.jpeg" alt="منتج 1" class="rounded-lg mx-auto mb-3">
+                    <img src="images/product1.jpeg" alt="منتج 1" class="rounded-lg mx-auto mb-3">
                     <h3 class="text-xl font-bold text-gray-900">✨ منتج الفخامة الأصلي</h3>
                     <p class="text-gray-700 mt-2">مصنوع من أجود المواد لتجربة لا مثيل لها. يجمع بين الفخامة والأداء المذهل.</p>
                 </div>
