--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h2 class="text-3xl font-bold text-gray-900 mb-6">💎 منتجاتنا المميزة!</h2>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                <!-- المنتج الأول -->
+                <!-- المنتج الأول --
                 <div class="bg-white p-4 rounded-lg shadow-lg">
                     <img src="images/product1.jpeg" alt="منتج 1" class="rounded-lg mx-auto mb-3">
                     <h3 class="text-xl font-bold text-gray-900">✨ منتج الفخامة الأصلي</h3>
