--- a/index.html
+++ b/index.html
@@ -90,28 +90,28 @@
 
                 <!-- المنتج الثاني -->
                 <div class="bg-white p-4 rounded-lg shadow-lg">
-                    <img src="/images/product2.jpeg" alt="منتج 2" class="rounded-lg mx-auto mb-3">
+                    <img src="IMG_3098.jpeg" alt="منتج 2" class="rounded-lg mx-auto mb-3">
                     <h3 class="text-xl font-bold text-gray-900">🌿 منتج العناية بالبشرة</h3>
                     <p class="text-gray-700 mt-2">تركيبة طبيعية تمنح بشرتك النعومة والانتعاش، مثالي لكل أنواع البشرة.</p>
                 </div>
 
                 <!-- المنتج الثالث -->
                 <div class="bg-white p-4 rounded-lg shadow-lg">
-                    <img src="product3.jpeg" alt="منتج 3" class="rounded-lg mx-auto mb-3">
+                    <img src="IMG_3100.jpeg" alt="منتج 3" class="rounded-lg mx-auto mb-3">
                     <h3 class="text-xl font-bold text-gray-900">☕ قهوة فاخرة محمصة</h3>
                     <p class="text-gray-700 mt-2">استمتع بطعم القهوة الأصلية المحمصة بعناية فائقة، مثالية لمحبي القهوة الأصيلة.</p>
                 </div>
 
                 <!-- المنتج الرابع -->
                 <div class="bg-white p-4 rounded-lg shadow-lg">
-                    <img src="product4.jpeg" alt="منتج 4" class="rounded-lg mx-auto mb-3">
+                    <img src="IMG_3101.jpeg" alt="منتج 4" class="rounded-lg mx-auto mb-3">
                     <h3 class="text-xl font-bold text-gray-900">🕯️ شمعة عطرية طبيعية</h3>
                     <p class="text-gray-700 mt-2">شمعة مصنوعة من شمع طبيعي 100%، تمنحك أجواءً هادئة ورائحة منعشة تدوم طويلاً.</p>
                 </div>
 
                 <!-- المنتج الخامس -->
                 <div class="bg-white p-4 rounded-lg shadow-lg">
-                    <img src="product5.jpeg" alt="منتج 5" class="rounded-lg mx-auto mb-3">
+                    <img src="IMG_3102.jpeg" alt="منتج 5" class="rounded-lg mx-auto mb-3">
                     <h3 class="text-xl font-bold text-gray-900">🎧 سماعات لاسلكية بجودة عالية</h3>
                     <p class="text-gray-700 mt-2">استمتع بجودة صوت استثنائية وتجربة استماع بلا أسلاك، مصممة لأقصى راحة وأداء.</p>
                 </div>
